@@ -35,6 +35,8 @@ Changes for v2.01
 - Correct wording of ToadTog ForceOn function:  On->Off corrected to Off->On (Graham)
 - Resolve various issues concerning device upgrades that both have key moves and are assigned to more than one device button (Graham)
 - Fix ToadTog bug that causes Special Function editor to display incorrect entries (Graham)
+- Add Advanced menu item Primacy in RM and RMIR to allow choice of whether OBC or EFC/Hex is preserved when a protocol is changed or edited (Graham)
+- Add Advanced menu item Edit Protocol in RM that allows adding and editing of custom code to standard protocols (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
